# homework_30.1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
myproject/: requirements.txt
myproject/courses/: admin.py  apps.py  models.py  paginations.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
myproject/courses/fixtures/: payments.json
myproject/courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
myproject/myproject/: settings.py  urls.py
myproject/users/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
myproject/users/fixtures/: groups.json
myproject/users/management/commands/: csu.py
myproject/users/migrations/: 0001_initial.py  0002_payment.py
