[tool.poetry]
name = "homework-30-1"
version = "0.1.0"
description = ""
authors = ["Svetlana Kalashnikova <serebsveta@rambler.ru>"]
readme = "README.md"
packages = [{include = "homework_30"}]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"
djangorestframework = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
